fix dark mode and color, add hero image animation

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    color: #44475a;
-    background-color: #f8f8f2;
+
+    color: #f8f8f2;
+    background-color: #44475a;
 }
 
 header {
@@ -20,17 +21,11 @@ header {
 }
 
 .darkMode {
-    color: #f8f8f2;
-    background-color: #44475a;
+    color: #44475a;
+    background-color: #f8f8f2;
 }
 
-/* .statusBarDarkMode {
-    background-color: #44475a;
-}
 
-.statusBarFillDarkMode {
-    background-color: #cfcfc8;
-} */
 
 .hero {
     text-align: center;
@@ -43,7 +38,7 @@ header {
 .progressBarContainer {
     display: flex;
     align-items: center;
-    padding: 0 50px;
+    padding: 0 10 px;
     margin: 0;
 }
 
@@ -78,7 +73,7 @@ header {
 .coinInfo p {
     font-size: 20px;
     font-weight: 900;
-    margin-left: auto;
+    margin-left: 20px;
 }
 
 .athOnStatusBar {
@@ -86,6 +81,7 @@ header {
     font-weight: 900;
     text-align: end;
     margin: 0;
+    color: #bd93f9;
 }
 
 
@@ -120,17 +116,25 @@ header {
     height: 100%;
     width: auto;
     /* margin: -5px; */
-    background-color: #44475a;
+    background-color: #ff5555;
+
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 0px;
 }
 
+.logo-rotate {
+    transform: rotate(180deg);
+}
+
+#logo:active {
+    translate: 5px;
+}
 
 
 .status-bar-fill:hover {
-    background-color: gold;
+    background-color: #f1fa8c;
 
 }
 
